# QuickSortAVX

./: .gitignore  CMakeLists.txt  Makefile  avx2-partition.cpp  avx2-quicksort.cpp  gather_results.sh  input_data.cpp  main.cpp  partition.cpp  quicksort-all.cpp  quicksort.cpp  speed.cpp  test.cpp
